--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "http-errors": "~1.6.3",
     "mongodb": "^4.8.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.18",
     "razorpay": "^2.8.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
